act: update return type